# arcane_sandbox

./: .clang-format  .gitignore  CMakeLists.txt  README.md
amr_proto/: CMakeLists.txt  HelloWorld.arc  HelloWorld.config  SayHello.axl  SayHelloModule.cc  SayHelloModule.h
amr_test/: CMakeLists.txt  HelloWorld.arc  SayHello.axl  SayHelloModule.cc  SayHelloModule.h
dof_test/: CMakeLists.txt  HelloWorld.arc  SayHelloModule.cc  SayHelloModule.h
extract_cells/: CMakeLists.txt  HelloWorld.arc  HelloWorld.config  HelloWorld2.arc  SayHello.axl  SayHelloModule.cc  SayHelloModule.h  main.cc
itemdirectionmng/: CMakeLists.txt  HelloWorld.arc  HelloWorld.config  SayHello.axl  SayHelloModule.cc  SayHelloModule.h
mesh_backend/: CMakeLists.txt  main.cc
nvcc_lambda/: README.md  nvcc_lambda.cu
plan/: CMakeLists.txt  SayHelloModule.cc
read_mesh/: CMakeLists.txt  HelloWorld.arc  HelloWorld.config  SayHelloModule.cc  SayHelloModule.h
refine_coarse/: CMakeLists.txt  HelloWorld.arc  HelloWorld.config  SayHello.axl  SayHelloModule.cc  SayHelloModule.h
runcommand/: CMakeLists.txt  HelloWorld.arc  SayHello.axl  SayHelloModule.cc  SayHelloModule.h
shared_memory/: CMakeLists.txt  HelloWorld.arc  SayHello.axl  SayHelloModule.cc
sqlite_test/: CMakeLists.txt  HelloWorld.arc  HelloWorld.config  SayHello.axl  SayHelloModule.cc  SayHelloModule.h
template/: CMakeLists.txt  SayHello.axl  SayHelloModule.cc  SayHelloModule.h
test_replace/: CMakeLists.txt  HelloWorld.arc  HelloWorld2.arc  SayHello.axl  SayHelloModule.cc  SayHelloModule.h  main.cc
