cmake_minimum_required(VERSION 3.21)
project(HelloWorld LANGUAGES CXX C)

#add_subdirectory(template)
#add_subdirectory(itemdirectionmng)
#add_subdirectory(runcommand)
#add_subdirectory(sqlite_test)
#add_subdirectory(refine_coarse)
#add_subdirectory(mesh_backend)
#add_subdirectory(read_mesh)
#add_subdirectory(test_replace)
#add_subdirectory(dof_test)
add_subdirectory(amr_test)
